--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "access-log": "~0.1.1",
     "log-timestamp": "~0.0.5",
-    "mime": "~1.2.9"
+    "mime": "~1.2.9",
+    "easyreq": "~0.0.0"
   }
 }
